--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "url": "https://github.com/twodayslate/swift-package-registry.git"
  },
  "dependencies": {
+  "@octokit/graphql": "^4.3.1",
   "@primer/octicons": "^9.6.0",
   "axios": "^0.19.2",
   "body-parser": "^1.13.3",
@@ -25,19 +26,17 @@
   "express-partials": "^0.3.0",
   "express-session": "^1.11.3",
   "highlight.js": "^9.18.1",
-  "knex": "^0.20.13",
-  "markdown-it": "^10.0.0",
   "marked": "^0.8.2",
   "method-override": "^2.3.5",
   "node-docker-api": "^1.1.22",
   "octonode": "^0.9.5",
-  "orm": "^5.0.5",
   "passport": "^0.4.1",
   "passport-github2": "^0.1.11",
   "pg": "^7.18.2",
   "pg-hstore": "^2.3.3",
   "router": "^1.1.3",
   "sequelize": "^5.21.5",
-  "sequelize-cli": "^5.5.1"
+  "sequelize-cli": "^5.5.1",
+  "uuid": "^7.0.2"
  }
 }
