--- a/package.json
+++ b/package.json
@@ -1,42 +1,63 @@
 {
- "name": "swift_package_registry",
- "description": "Swift Package Registry",
- "version": "1.0.0",
- "main": "app.js",
- "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1"
- },
- "keywords": [],
- "author": "",
- "license": "ISC",
- "homepage": "https://swiftpackageregistry.com",
- "repository": {
-  "type": "git",
-  "url": "https://github.com/twodayslate/swift-package-registry.git"
- },
- "dependencies": {
-  "@octokit/graphql": "^4.3.1",
-  "@primer/octicons": "^9.6.0",
-  "axios": "^0.19.2",
-  "body-parser": "^1.13.3",
-  "connect-flash": "^0.1.1",
-  "dockerode": "^3.1.0",
-  "ejs": "^3.0.1",
-  "express": "^4.17.1",
-  "express-partials": "^0.3.0",
-  "express-session": "^1.11.3",
-  "highlight.js": "^9.18.1",
-  "marked": "^0.8.2",
-  "method-override": "^2.3.5",
-  "node-docker-api": "^1.1.22",
-  "octonode": "^0.9.5",
-  "passport": "^0.4.1",
-  "passport-github2": "^0.1.11",
-  "pg": "^7.18.2",
-  "pg-hstore": "^2.3.3",
-  "router": "^1.1.3",
-  "sequelize": "^5.21.5",
-  "sequelize-cli": "^5.5.1",
-  "uuid": "^7.0.2"
- }
+  "name": "swift-package-registry",
+  "version": "1.0.0",
+  "private": true,
+  "description": "A registry of Swift packages",
+  "author": "twodayslate <zac@gorak.us>",
+  "license": "ISC",
+  "repository": "https://github.com/twodayslate/swift-package-registry.git",
+  "homepage": "https://github.com/twodayslate/swift-package-registry",
+  "bugs": "https://github.com/twodayslate/swift-package-registry/issues",
+  "keywords": [
+    "probot",
+    "github",
+    "probot-app"
+  ],
+  "scripts": {
+    "dev": "nodemon",
+    "start": "probot run ./index.js",
+    "lint": "standard --fix",
+    "test": "jest && standard",
+    "test:watch": "jest --watch --notify --notifyMode=change --coverage"
+  },
+  "dependencies": {
+    "@octokit/rest": "^17.1.4",
+    "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "dockerode": "^3.1.0",
+    "ejs": "^3.0.1",
+    "express": "^4.17.1",
+    "express-partials": "^0.3.0",
+    "express-session": "^1.17.0",
+    "pg": "^7.18.2",
+    "pg-hstore": "^2.3.3",
+    "probot": "^9.5.3",
+    "sequelize": "^5.21.5",
+    "uuid": "^7.0.2"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0",
+    "nock": "^12.0.0",
+    "nodemon": "^2.0.0",
+    "smee-client": "^1.1.0",
+    "standard": "^14.3.1"
+  },
+  "engines": {
+    "node": ">= 8.3.0"
+  },
+  "standard": {
+    "env": [
+      "jest"
+    ]
+  },
+  "nodemonConfig": {
+    "exec": "npm start",
+    "watch": [
+      ".env",
+      "."
+    ]
+  },
+  "jest": {
+    "testEnvironment": "node"
+  }
 }
