--- a/package.json
+++ b/package.json
@@ -21,27 +21,28 @@
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
-    "@octokit/rest": "^17.1.4",
+    "@octokit/rest": "^17.11.2",
     "async": "^3.2.0",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
-    "dockerode": "^3.1.0",
-    "ejs": "^3.0.1",
+    "dockerode": "^3.2.1",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-partials": "^0.3.0",
-    "express-session": "^1.17.0",
-    "pg": "^7.18.2",
+    "express-session": "^1.17.1",
+    "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
-    "probot": "^9.5.3",
-    "sequelize": "^5.21.5",
-    "uuid": "^7.0.2"
+    "probot": "^10.8.0",
+    "sequelize": "^6.3.5",
+    "uuid": "^7.0.3",
+    "require-context": "^1.1.0"
   },
   "devDependencies": {
     "jest": "^24.9.0",
     "nock": "^12.0.0",
-    "nodemon": "^2.0.0",
-    "smee-client": "^1.1.0",
-    "standard": "^14.3.1"
+    "nodemon": "^2.0.4",
+    "smee-client": "^1.2.2",
+    "standard": "^14.3.4"
   },
   "engines": {
     "node": ">= 8.3.0"
