--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
+    "@actions/core": "^1.2.6",
     "@octokit/rest": "^17.11.2",
     "async": "^3.2.0",
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "dockerode": "^3.2.1",
@@ -33,9 +35,9 @@
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "probot": "^10.8.0",
+    "require-context": "^1.1.0",
     "sequelize": "^6.3.5",
-    "uuid": "^7.0.3",
-    "require-context": "^1.1.0"
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "jest": "^24.9.0",
