--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,10 @@ WEBHOOK_PROXY_URL=
 
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+# if you use the docker command in the README then you can use postgres://postgres:mysecretpassword@localhost:5432/spr here
 POSTGRESQL_SERVER=
 UUID_NAMESPACE=
 GITHUB_PERSONAL_ACCESS_TOKEN=
+PRIVATE_KEY=
 # If True then will set the reprocess flag for all packages at start
 REPROCESS_ALL=
