--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,31 @@
+# You find these in your GitHub App settings
 # The ID of your GitHub App
 APP_ID=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+# Go to https://smee.io/new set this to the URL that you are redirected to.
+# you'll need to set this up in your GitHub App settings as well
+WEBHOOK_PROXY_URL=
 WEBHOOK_SECRET=development
 
 # Use `trace` to get verbose logging or `info` to show less
 LOG_LEVEL=debug
 
-# Go to https://smee.io/new set this to the URL that you are redirected to.
-WEBHOOK_PROXY_URL=
-
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
-# if you use the docker command in the README then you can use postgres://postgres:mysecretpassword@localhost:5432/spr here
+# If you use the docker locally to setup PostgreSQL and use the following command:
+# docker run --name some-postgres -e POSTGRES_PASSWORD=mysecretpassword -e POSTGRES_DB=spr -d -p 5432:5432 postgres
+# you can then use the following value
+# postgres://postgres:mysecretpassword@localhost:5432/spr here
 POSTGRESQL_SERVER=
+
+# you can generate a uuid using python:
+# python -c "import uuid; print(uuid.uuid4())"
 UUID_NAMESPACE=
+
 GITHUB_PERSONAL_ACCESS_TOKEN=
-PRIVATE_KEY=
+
+# You will need to set the private key or the path to the private key
+#PRIVATE_KEY=
+#PRIVATE_KEY_PATH=
+
 # If True then will set the reprocess flag for all packages at start
 REPROCESS_ALL=
