--- a/package.json
+++ b/package.json
@@ -21,30 +21,31 @@
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
-    "@actions/core": "^1.2.6",
-    "@octokit/rest": "^17.11.2",
-    "async": "^3.2.0",
-    "axios": "^0.20.0",
+    "@actions/core": "^1.6.0",
+    "@octokit/rest": "^18.12.0",
+    "async": "^3.2.1",
+    "axios": "^0.22.0",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
-    "dockerode": "^3.2.1",
-    "ejs": "^3.1.5",
+    "dockerode": "^3.3.1",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-partials": "^0.3.0",
-    "express-session": "^1.17.1",
-    "pg": "^8.3.3",
-    "pg-hstore": "^2.3.3",
-    "probot": "^10.8.0",
+    "express-session": "^1.17.2",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "probot": "^12.1.1",
+    "request": "^2.88.2",
     "require-context": "^1.1.0",
-    "sequelize": "^6.3.5",
-    "uuid": "^7.0.3"
+    "sequelize": "^6.6.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "jest": "^24.9.0",
-    "nock": "^12.0.0",
-    "nodemon": "^2.0.4",
+    "jest": "^27.2.4",
+    "nock": "^13.1.3",
+    "nodemon": "^2.0.13",
     "smee-client": "^1.2.2",
-    "standard": "^14.3.4"
+    "standard": "^16.0.4"
   },
   "engines": {
     "node": ">= 8.3.0"
