--- a/package.json
+++ b/package.json
@@ -23,23 +23,28 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@octokit/rest": "^17.11.2",
+    "apicache": "^1.6.2",
     "async": "^3.2.0",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "dateformat": "^4.6.2",
     "dockerode": "^3.2.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-partials": "^0.3.0",
     "express-session": "^1.17.1",
+    "html-to-text": "^8.0.0",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "probot": "^10.8.0",
     "require-context": "^1.1.0",
+    "semver": "^7.3.5",
     "sequelize": "^6.3.5",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
+    "https-localhost": "^4.7.0",
     "jest": "^24.9.0",
     "nock": "^12.0.0",
     "nodemon": "^2.0.4",
@@ -52,6 +57,9 @@
   "standard": {
     "env": [
       "jest"
+    ],
+    "ignore": [
+      "/action/index.js"
     ]
   },
   "nodemonConfig": {
