--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "jest && standard",
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
-   "dependencies": {
+  "dependencies": {
     "@actions/core": "^1.10.0",
     "@octokit/rest": "^19.0.7",
     "absolutify": "^0.1.0",
@@ -29,7 +29,7 @@
     "axios": "^1.3.4",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
-    "dateformat": "^5.0.3",
+    "dateformat": "4.5.1",
     "dockerode": "^3.3.4",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
