--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "axios": "^1.3.4",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
-    "dateformat": "4.5.1",
+    "dateformat": "^4.6.3",
     "dockerode": "^3.3.4",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
