--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "html-to-text": "^9.0.4",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
-    "probot": "^12.3.0",
     "require-context": "^1.1.0",
     "semver": "^7.3.8",
     "sequelize": "^6.29.1",
@@ -49,6 +48,7 @@
     "jest": "^24.9.0",
     "nock": "^12.0.0",
     "nodemon": "^2.0.4",
+    "probot": "github:makzpatel/probot",
     "smee-client": "^1.2.2",
     "standard": "^14.3.4"
   },
