--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start": "probot run ./index.js",
     "lint": "standard --fix",
     "test": "jest && standard",
-    "test:watch": "jest --watch --notify --notifyMode=change --coverage"
+    "test:watch": "jest --watch --notify --notifyMode=change --coverage",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
@@ -36,8 +37,10 @@
     "express-partials": "^0.3.0",
     "express-session": "^1.17.3",
     "html-to-text": "^9.0.4",
+    "patch-package": "^6.5.1",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
+    "probot": "^12.3.0",
     "require-context": "^1.1.0",
     "semver": "^7.3.8",
     "sequelize": "^6.29.1",
@@ -48,7 +51,6 @@
     "jest": "^24.9.0",
     "nock": "^12.0.0",
     "nodemon": "^2.0.4",
-    "probot": "github:makzpatel/probot",
     "smee-client": "^1.2.2",
     "standard": "^14.3.4"
   },
