--- a/package.json
+++ b/package.json
@@ -18,33 +18,31 @@
     "start": "probot run ./index.js",
     "lint": "standard --fix",
     "test": "jest && standard",
-    "test:watch": "jest --watch --notify --notifyMode=change --coverage",
-    "postinstall": "patch-package"
+    "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@octokit/rest": "^19.0.7",
+    "@actions/core": "^1.2.6",
+    "@octokit/rest": "^17.11.2",
     "absolutify": "^0.1.0",
-    "apicache": "^1.6.3",
-    "async": "^3.2.4",
-    "axios": "^1.3.4",
-    "body-parser": "^1.20.2",
+    "apicache": "^1.6.2",
+    "async": "^3.2.0",
+    "axios": "^0.20.0",
+    "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
-    "dateformat": "^4.6.3",
-    "dockerode": "^3.3.4",
-    "ejs": "^3.1.8",
-    "express": "^4.18.2",
+    "dateformat": "^4.6.2",
+    "dockerode": "^3.2.1",
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
     "express-partials": "^0.3.0",
-    "express-session": "^1.17.3",
-    "html-to-text": "^9.0.4",
-    "patch-package": "^6.5.1",
-    "pg": "^8.10.0",
-    "pg-hstore": "^2.3.4",
-    "probot": "^12.3.0",
+    "express-session": "^1.17.1",
+    "html-to-text": "^8.0.0",
+    "pg": "^8.3.3",
+    "pg-hstore": "^2.3.3",
+    "probot": "^10.8.0",
     "require-context": "^1.1.0",
-    "semver": "^7.3.8",
-    "sequelize": "^6.29.1",
-    "uuid": "^9.0.0"
+    "semver": "^7.3.5",
+    "sequelize": "^6.3.5",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "https-localhost": "^4.7.0",
