--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "express": "^4.18.2",
     "express-partials": "^0.3.0",
     "express-session": "^1.17.3",
+    "git-commit-info": "^2.0.1",
     "html-to-text": "^9.0.4",
     "patch-package": "^6.5.1",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "probot": "^12.3.0",
+    "request": "^2.88.2",
     "require-context": "^1.1.0",
     "semver": "^7.3.8",
     "sequelize": "^6.29.1",
