Remove older swift tags

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 # Go to https://smee.io/new set this to the URL that you are redirected to.
 # you'll need to set this up in your GitHub App settings as well
+# https://webhook.cool may also work?
 WEBHOOK_PROXY_URL=
 WEBHOOK_SECRET=development
 
