Support advanced search

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,6 +18,20 @@ jobs:
       matrix:
         node-version: [24.x]
 
+    services:
+      postgres:
+        image: postgres:16-alpine
+        env:
+          POSTGRES_PASSWORD: mysecretpassword
+          POSTGRES_DB: spr
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready -U postgres -d spr"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -29,3 +43,7 @@ jobs:
     - run: npm run lint
       env:
         CI: true
+    - run: npm test
+      env:
+        CI: true
+        POSTGRESQL_SERVER: postgres://postgres:mysecretpassword@localhost:5432/spr
