--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@actions/core": "1.11.1",
+    "@muhgholy/search-query-parser": "^3.0.0",
     "@octokit/rest": "^19.0.7",
     "absolutify": "^0.1.0",
     "apicache": "^1.6.3",
